# eulumdat-analysis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/input/: sample_01.ldt  sample_03.ldt  sample_04.ldt  sample_05.ldt  sample_06.ldt  sample_07.ldt  sample_08.ldt  sample_09.ldt  sample_10.ldt  sample_11.ldt  sample_12.ldt  sample_13.ldt  sample_14.ldt  sample_15.ldt  sample_16.ldt
examples/: 01_basic_usage.md  02_resample.md  03_luminous_flux_range.md
src/ldt_analysis/: __init__.py  flux.py  half_angle.py  resample.py
tests/: test_flux.py  test_half_angle.py  test_resample.py
